--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.application.name=pedidos-ms
 eureka.client.service-url.defaultZone=http://localhost:8081/eureka/
 server.port=0
+eureka.instance.preferIpAddress=true
+eureka.instance.instance-id=${spring.application.name}:${random.int}
